--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+What started as a personal edit for Espen and his fellow server members to make The End dimension look like the Twilight Realm from Zelda
+turned into Loop. The shader you are seeing right now.
+
 License as stated from Chocapic13
 
 Sharing a modified version of my shaders:
