--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 What started as a personal edit for Espen and his fellow server members to make The End dimension look like the Twilight Realm from Zelda
-turned into Loop. The shader you are seeing right now.
+turned into probably the most extensive Chocapic13 edit in shader history. a.k.a Loop, the shader you are seeing right now.
 
-License as stated from Chocapic13
+
+
+**License as stated from Chocapic13**
 
 Sharing a modified version of my shaders:
 -You are not allowed to claim any of the code included in "Chocapic13' shaders" as your own
