--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -7,7 +7,7 @@ screen.Overworld=Overworld
 screen.Nether=Nether
 screen.End=End
 screen.Camera=Camera
-screen.Shading=Shading
+screen.Shading=Shading and PBR
 screen.Wavy_stuff=Wind
 screen.Water=Water
 screen.Reflections=Reflections
@@ -17,7 +17,7 @@ screen.Sun_and_Moon_Colors = Sun and Moon Colors
 screen.TAA_OPTIONS=TAA options
 screen.DepthOfField=Depth of field
 screen.Purkinje_effect=Purkinje effect
-screen.POM= Pom and Normals
+screen.POM= Physically Based Rendering
 screen.Shadows=Shadows
 screen.Fog_Color=Fog color
 screen.Fog_Densities=Fog densities
