--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -127,6 +127,9 @@ option.Stochastic_Transparent_Shadows=Transparent shadows
 option.POM_DEPTH=Parallax Depth
 option.POM2=Parallax Occlusion
 option.POM=Physically Based Rendering
+option.SPEC_SCREENSPACE_REFLECTIONS= Reflections
+
+
 option.POM_MAP_RES=POM resolution
 option.MAX_ITERATIONS=Iterations
 option.MAX_DIST=Distance
