add fxaa for bonus smoothness

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -14,7 +14,7 @@ screen.Reflections=Reflections
 screen.Sky = Sky
 screen.Sky_coefficients = Sky coefficients
 screen.Sun_and_Moon_Colors = Sun and Moon Colors
-screen.TAA_OPTIONS=TAA options
+screen.TAA_OPTIONS = Antialiasing options
 screen.DepthOfField=Depth of field
 screen.Purkinje_effect=Purkinje effect
 screen.PBR= Physically Based Rendering
@@ -28,7 +28,6 @@ screen.Volumetric_Clouds= Volumetric clouds
 screen.Wavy_stuff = Wind
 screen.Volumetric_Fog = Volumetric Fog
 screen.Advanced = Advanced
-screen.TAA_OPTIONS = TAA Options
 screen.Lighting= Lighting
 screen.Ambient = Ambient
 screen.Filtering = Filtering
