--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -21,6 +21,7 @@ screen.PBR= Physically Based Rendering
 screen.Shadows=Shadows
 screen.Fog_Color=Fog color
 screen.Fog_Densities=Fog densities
+screen.SSPT=Global Illumination
 
 screen.Torch = Block lights
 screen.Atmospherics= Atmospherics
@@ -75,8 +76,12 @@ option.Exposure_Speed=Exposure speed
 
 option.Manual_exposure_value= Manual exposure value
 option.BLOOM_STRENGTH=Bloom strength
+option.BLOOM_QUALITY=Bloom quality
 option.MOTION_BLUR=Motion blur
 option.MOTION_BLUR_STRENGTH=Motion blur strength
+option.CHROMATIC=Chromatic abberation
+option.VIGNETTE=Vignette
+option.GRAIN=Grain
 
 
 #TONEMAP
@@ -114,11 +119,13 @@ option.Purkinje_Multiplier=Brightness multiplier
 option.DISABLE_ALPHA_MIPMAPS=Disable alpha mipmaps
 option.BICUBIC_UPSCALING=Bicubic upscaling
 option.SSPT=Screen space path tracing
-option.RT_FILTER=SSPT filtering
+option.RT_FILTER=Extra filtering
 option.MAX_RAYLENGTH=Max raylength
+option.GI=Reflective ShadowMaps
 option.RAYS=SSPT rays
 option.CONTRAST_ADAPTATIVE_SHARPENING=Contrast adaptive shapen
 option.SHARPENING=Strength
+option.SSPT_MODE=SSPT Mode
 value.SSPT_MODE.0=Just AO (RTAO)
 value.SSPT_MODE.1=Full GI (SSPT)
 
@@ -192,6 +199,23 @@ option.CLOUDS_SPEED=Cloud speed
 option.VOLUMETRIC_CLOUDS=Clouds
 option.BLOOMY_FOG=Bloom fog
 option.VOLUMETRIC_FOG=Fog
+option.VL_RENDER_RESOLUTION=Fog resolution
+
+#Clouds
+option.cloud_LevelOfDetail=LOD
+option.cloud_ShadowLevelOfDetail=Shadow LOD
+option.cloud_ShadowLevelOfDetailLQ= Low Quality Shadow LOD
+option.cloud_LevelOfDetailLQ= Low Quality LOD
+option.maxRayMarchSteps=Max Ray steps
+option.minRayMarchSteps=Min Ray steps
+option.maxRayMarchStepsLQ=Max Low Quality Ray steps
+option.minRayMarchStepsLQ=Max Low Quality Ray steps
+option.cloudCoverage=Cloud coverage
+option.cloudDemsity=Cloud density
+option.fbmAmount=Noise amount
+option.fbmPower1=High Frequency detail 1
+option.fbmPower2=High Frequency detail 2
+
 
 
 #FOGCOLOR 
