Made some DoF sliders more... familiar.

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -122,7 +122,9 @@ value.BOKEH_MODE.1=Hexagonal
 value.BOKEH_MODE.2=High Quality
 value.BOKEH_MODE.3=Paint/Brush
 option.focal=Focal length
+suffix.focal=mm
 option.aperture=Aperture
+prefix.aperture=f/
 option.MANUAL_FOCUS=Manual focus distance
 suffix.MANUAL_FOCUS= m
 option.EXCLUDE_MODE=Blur Mode
